--- a/veracode.yml
+++ b/veracode.yml
@@ -1,95 +1,133 @@
+# ============================================================
+# Veracode GitHub Workflow Integration Configuration
+# Organization-wide scanning configuration
+# ============================================================
+
+# ------------------------------------------------------------
+# GENERAL SETTINGS
+# ------------------------------------------------------------
+global:
+  # Set to true to automatically run scans across all repos listed in repo_list.yml
+  # or all repos if wildcard '*' is used.
+  enable_repo_scanning: true
+
+  # Enable or disable global debugging output (optional)
+  debug: false
+
+# ------------------------------------------------------------
+# REPOSITORY SCOPING
+# ------------------------------------------------------------
+# To scan all repos in your org, configure repo_list.yml with:
+# include_repos:
+#   - '*'
+# exclude_repos:
+#   - 'veracode'     # Example: exclude the integration repo itself
+
+# ------------------------------------------------------------
+# STATIC ANALYSIS (SAST) CONFIGURATION
+# ------------------------------------------------------------
 veracode_static_scan:
+  # Enable or disable static analysis scanning
+  enabled: true
+
+  # Run scans automatically on push and/or pull request
   push:
     trigger: true
-    # Please only specify either branches_to_run or branches_to_exclude
-    # Entering both will only execute branches_to_run
-    # Leaving them both blank means this will never run
     branches_to_run:
-      - '*'
-    branches_to_exclude:
+      - main
+      - master
+      - develop
+      - release/*
   pull_request:
     trigger: true
-    action:
-      - opened
-      - synchronize
-    target_branch:
-      - default_branch 
-  # If the analysis_on_platform is set to true,
-  # Veracode will save your last scan result, on the default branch, as an application profile with the same name as your scanned repository on the Veracode platform. 
-  # If the analysis_on_platform is set to false, scan results will not be saved to the Veracode platform.
-  analysis_on_platform: false
-  # If break_build_policy_findings is set to true, the build will break when findings violate the policy.
+
+  # Optionally store results in the Veracode Platform (recommended for visibility)
+  analysis_on_platform: true
+
+  # Security policy name defined in Veracode platform
+  policy: "Veracode Recommended Medium + SCA"
+
+  # Break build if policy fails
   break_build_policy_findings: true
-  # If break_build_invalid_policy is set to true, the build will break when the policy name is invalid.
-  break_build_invalid_policy: true
-  # If the break_build_on_error is set to true, the build will break if the scan failed to complete in time or with an error and the error_message will be displayed.
-  break_build_on_error: false
-  error_message: "Veracode static scan faced a problem. Please contact your Veracode administrator for more information."
-  # Default policy to be used if a policy isn't already assigned to the application profile.
-  policy: 'Veracode Recommended Medium + SCA'
-  # If the create_code_scanning_alert is set to true, GitHub security code scanning vulnerability alerts will be created for static findings.
-  create_code_scanning_alert: false
-  # If the create_issue is set to true, GitHub Issues will be created for static findings.
+
+  # Enable SARIF output to show findings directly in GitHub Code Scanning Alerts
+  create_code_scanning_alert: true
+
+  # Create GitHub Issues automatically for new findings
   create_issue: false
-  # If the trigger is set to true, a scan is triggered when you create an issue containing the commands value or add a comment containing the commands value to an issue.
-  # Syntax to be used - COMMANDS_VALUE [branch: BRANCH_NAME]
-  issues:
-    trigger: false
-    commands:
-      - "Veracode Static Scan"
 
+  # Automatically create a new Veracode application profile if one doesn’t exist
+  create_application: true
+
+  # Optional: Run a lightweight pipeline scan before upload
+  run_pipeline_scan: false
+
+  # Optional: Upload artifacts built by custom workflows
+  use_custom_workflow: false
+
+  # Timeouts (in minutes)
+  scan_timeout: 60
+
+# ------------------------------------------------------------
+# SOFTWARE COMPOSITION ANALYSIS (SCA) CONFIGURATION
+# ------------------------------------------------------------
 veracode_sca_scan:
-  push:
-    trigger: true
-    # Please only specify either branches_to_run or branches_to_exclude
-    # Entering both will only execute branches_to_run
-    # Leaving them both blank means this will never run
-    branches_to_run:
-      - '*'
-    branches_to_exclude:
-  pull_request:
-    trigger: true
-    action:
-      - opened
-      - synchronize
-    target_branch:
-      - default_branch
-  # If the break_build_on_error is set to true, the build will break if the scan failed to complete or with an error, no libraries were found, 
-  # or no build system was found and the error_message will be displayed.
-  break_build_on_error: true
-  error_message: "Veracode SCA scan faced a problem. Please contact your Veracode administrator for more information."
-  # If the trigger is set to true, a scan is triggered when you create an issue containing the commands value or add a comment containing the commands value to an issue.
-  # Syntax to be used - COMMANDS_VALUE [branch: BRANCH_NAME]
-  issues:
-    trigger: false
-    commands:
-      - "Veracode SCA Scan"
+  enabled: true
 
-veracode_iac_secrets_scan:
+  # Run on both push and pull request events
   push:
     trigger: true
-    # Please only specify either branches_to_run or branches_to_exclude
-    # Entering both will only execute branches_to_run
-    # Leaving them both blank means this will never run
-    branches_to_run:
-      - '*'
-    branches_to_exclude:
   pull_request:
     trigger: true
-    action:
-      - opened
-      - synchronize
-    target_branch:
-      - default_branch
-  # If break_build_policy_findings is set to true, the build will break when findings violate the policy.
+
+  # Continuous monitoring of open-source components
+  analysis_on_platform: true
+
+  # Break build if CVSS severity ≥ 7
   break_build_policy_findings: true
-  # If the break_build_on_error is set to true, the build will break if the scan failed to complete or with an error, no libraries were found, 
-  # or no build system was found and the error_message will be displayed.
-  break_build_on_error: true
-  error_message: "Veracode IAC secrets scan faced a problem. Please contact your Veracode administrator for more information."
-  # If the trigger is set to true, a scan is triggered when you create an issue containing the commands value or add a comment containing the commands value to an issue.
-  # Syntax to be used - COMMANDS_VALUE [branch: BRANCH_NAME]
-  issues:
-    trigger: false
-    commands:
-      - "Veracode IAC Scan"
+
+  # CVSS threshold for failing the build
+  fail_on_severity: "High"
+
+  # Upload SCA results to GitHub Code Scanning
+  create_code_scanning_alert: true
+
+  # Optional: enable auto-remediation PRs using Veracode Fix
+  enable_veracode_fix: true
+
+# ------------------------------------------------------------
+# CUSTOM BUILD OPTIONS
+# ------------------------------------------------------------
+build:
+  # If your repos use different build tools, you can specify defaults here.
+  # This section is optional and can be overridden per repo.
+  default_build_command: |
+    echo "Running default build"
+    mvn -B clean package -DskipTests || true
+
+  # Directory or file path for build artifact to upload for scanning
+  artifact_file: "./target"
+
+# ------------------------------------------------------------
+# NOTIFICATIONS AND REPORTING
+# ------------------------------------------------------------
+notifications:
+  # Notify on Slack or webhook if desired (requires separate configuration)
+  enable_notifications: false
+
+  # Send notifications only on failed scans
+  notify_on_failures_only: true
+
+  # Example Slack webhook (disabled by default)
+  slack_webhook_url: ""
+
+# ------------------------------------------------------------
+# RETENTION / CLEANUP
+# ------------------------------------------------------------
+cleanup:
+  # Retain logs and artifacts for 7 days
+  artifact_retention_days: 7
+
+# ------------------------------------------------------------
+# END OF CONFIGURATION
+# ------------------------------------------------------------
