--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -26,7 +26,8 @@ jobs:
         run: mvn -B clean package -DskipTests
 
       - name: Upload & Scan with Veracode
-        uses: veracode/veracode-uploadandscan-action@v0.2.10
+        uses: veracode/veracode-uploadandscan-action@06a6aefb8b15dc510ce6ef144ad8945f4afc0b2f
+
         with:
           appname: "Verademo"
           createprofile: true
